# aidara

./: .clang-format  .gitignore  .gitmodules  .pyspelling.yml  .wordlist.txt  LICENSE  README.md  ruff.toml
.github/: CODEOWNERS
.github/workflows/: clang-format.yml  cpp_check.yml  cpplint.yml  mypy.yaml  ruff.yml  spell_check.yaml
code/aidara_bringup/: README.md  package.xml  setup.cfg  setup.py
code/aidara_bringup/launch/: aidara_launch.py  camera_launch.py  compliant_trajectory_controller_launch.py  franka_launch.py  static_transforms_launch.py  staubli_launch.py  vision_launch.py
code/aidara_bringup/static_transforms/: franka_transforms.yaml  staubli_transforms.yaml
code/aidara_common/: README.md  package.xml  setup.cfg  setup.py
code/aidara_common/aidara_common/: __init__.py  async_utils.py  geometry_utils.py  image_utils.py  node_utils.py  service_utils.py  singleton.py  tf_utils.py  topic_utils.py  types.py
code/aidara_msgs/: CMakeLists.txt  README.md  package.xml
code/aidara_msgs/srv/: CalibrateCamera.srv  GeometricGrasp.srv  SetGripperState.srv  TargetPose.srv  Tf2DoTransform.srv  Tf2GetTransform.srv  Tf2TransformPoint.srv  Tf2TransformPose.srv  UpdateParams.srv
code/camera_calibration/: README.md  package.xml  requirements.txt  setup.py
code/camera_calibration/camera_calibration/: __init__.py  calibration_node.py  chessboard_calibration.py
code/camera_calibration/config/: config.yaml
code/compliant_trajectory_controller/: CMakeLists.txt  README.md  compliant_trajectory_controller_plugin.xml  package.xml
code/compliant_trajectory_controller/config/: controllers.yaml
code/compliant_trajectory_controller/controller/: compliant_trajectory_controller.cpp
code/compliant_trajectory_controller/controller/include/compliant_trajectory_controller/: compliant_trajectory_controller.hpp  pseudo_inversion.hpp
code/compliant_trajectory_controller/controller/urdf/: panda.urdf
code/geometric_grasp/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
code/geometric_grasp/geometric_grasp/: __init__.py  debug_cli.py  dummy_client.py  geometric_grasp_server.py
code/gripper_controller/: package.xml  setup.cfg  setup.py
code/gripper_controller/gripper_controller/: __init__.py  gripper.py
code/hand_position/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
code/hand_position/hand_position/: __init__.py  hand_position.py
code/llm_planning/: package.xml  requirements.txt  setup.cfg  setup.py
code/llm_planning/example_prompts/: examples.yaml  minigame_prompts.yaml  playground_prompts.yaml
code/llm_planning/llm_planning/: __init__.py  llm_planner.py
code/llm_planning/llm_planning/llm_interfaces/: __init__.py  common.py  gemini_interface.py  gpt_4_interface.py  llm_interface.py
code/rerun_manager/: package.xml  requirements.txt  setup.cfg  setup.py
code/rerun_manager/rerun_manager/: __init__.py  rerun_manager.py
code/speech2text/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
code/speech2text/speech2text/: __init__.py  speech2text.py
code/speech_to_text/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
code/speech_to_text/speech_to_text/: speech_to_text.py
code/staubli_controller/: package.xml  setup.cfg  setup.py
code/staubli_controller/staubli_controller/: __init__.py  staubli_controller.py  staubli_gripper.py
code/text_to_speech/: package.xml  requirements.txt  setup.cfg  setup.py
code/text_to_speech/text_to_speech/: __init__.py  text_to_speech.py
code/tf2_service/: README.md  package.xml  setup.cfg  setup.py
code/tf2_service/tf2_service/: __init__.py  tf2_server.py
code/top_level_actions/: package.xml  setup.cfg  setup.py
code/top_level_actions/config/: franka_config.yaml  staubli_config.yaml
code/top_level_actions/top_level_actions/: __init__.py  action_collection.py  llm_actions_node.py
code/trajectory_planning/: package.xml  setup.cfg  setup.py
code/trajectory_planning/config/: franka_planner_config.yml  staubli_planner_config.yml
code/trajectory_planning/trajectory_planning/: __init__.py  debug_cli.py  planner.py
dependencies/curobo/src/curobo/content/assets/robot/franka_description/: franka_panda.urdf
dependencies/curobo/src/curobo/content/assets/robot/tx2_60_description/: tx2_60.urdf
dependencies/curobo/src/curobo/content/assets/robot/tx2_60_description/meshes/: BASE_simplified.stl  J1.stl  J2_simplified.stl  J3.stl  J4_simplified.stl  J5.stl  J6.stl
dependencies/curobo/src/curobo/content/configs/robot/: franka_custom.yml  tx2_60.yml  tx2_60_hq.yml
dependencies/curobo/src/curobo/content/configs/robot/spheres/: franka_mesh.yml
dependencies/curobo/src/curobo/content/configs/world/: collision_nvblox_online.yml  collision_table.yml  franka_collision_table.yml  staubli_collision_table.yml
dependencies/franka_ros2/franka_bringup/config/: controllers.yaml
dependencies/franka_ros2/franka_bringup/launch/: franka.launch.py
dependencies/franka_ros2/franka_example_controllers/: franka_example_controllers.xml
dependencies/franka_ros2/franka_robot_state_broadcaster/: CMakeLists.txt  package.xml
dependencies/franka_ros2/franka_robot_state_broadcaster/src/: franka_robot_state_broadcaster.cpp  franka_robot_state_broadcaster_parameters.yaml
dependencies/franka_ros2/franka_semantic_components/: CMakeLists.txt
dependencies/zed-ros2-wrapper/zed_components/: CMakeLists.txt
dependencies/zed-ros2-wrapper/zed_components/src/zed_camera/include/: zed_camera_component.hpp
dependencies/zed-ros2-wrapper/zed_components/src/zed_camera/src/: zed_camera_component.cpp
dependencies/zed-ros2-wrapper/zed_wrapper/config/: common.yaml  zed.yaml  zed2.yaml  zed2i.yaml  zedm.yaml
