<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aidara_bringup</name>
  <version>0.0.0</version>
  <description>Package containing all launchfiles of the aidara project.</description>
  <maintainer email="pramanathan@student.ethz.ch">aidara</maintainer>
  <license>MIT</license>

  <depend>ros2launch</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
