<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compliant_trajectory_controller</name>
  <version>0.0.0</version>
  <description>Compliant trajectory controller</description>
  <maintainer email="pramanathan@ethz.ch">aidara</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>aidara_msgs</depend>
  <depend>controller_interface</depend>
  <depend>franka_msgs</depend>
  <depend>pinocchio</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
