<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geometric_grasp</name>
  <version>0.0.0</version>
  <description>Geometric grasp generation</description>
  <maintainer email="fehegg@student.ethz.ch">felix</maintainer>
  <license>MIT</license>

  <depend>sklearn</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
