<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_controller</name>
  <version>0.0.0</version>
  <description> Gripper controller for the Franka research 3 robot arm.</description>
  <maintainer email="avonruffer@ethz.ch">aidara</maintainer>
  <license>MIT</license>

  <depend>franka_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
