<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_position</name>
  <version>0.0.0</version>
  <description>Hand position tracking</description>
  <maintainer email="luedkej@ethz.ch">aidara</maintainer>
  <license>MIT</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
