<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speech2text</name>
  <version>0.0.0</version>
  <description>Speech2Text ROS 2 Node.</description>
  <maintainer email="jkaufmann@ethz.ch">Joel Kaufmann</maintainer>
  <license>MIT</license>

  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
