<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>staubli_controller</name>
  <version>0.0.0</version>
  <description>Controller to communicate with the TX2-60 robot.</description>
  <maintainer email="pramanathan@student.ethz.ch">pavi</maintainer>
  <license>MIT</license>

  <depend>aidara_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
