<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_service</name>
  <version>0.0.0</version>
  <description>Service interface for tf.</description>
  <maintainer email="rbesenfel@student.ethz.ch">aidara</maintainer>
  <license>MIT</license>
  
  <exec_depend>aidara_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
