<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_planning</name>
  <version>0.0.0</version>
  <description>Find an optimized path for a goal pose.</description>
  <maintainer email="pramanathan@ethz.chh">Pavi</maintainer>
  <license>MIT</license>

  <depend>aidara_msgs</depend>
  <depend>aidara_common</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclpy_action</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
